fix: re-introduce modified version info

--- a/locale/cs.po
+++ b/locale/cs.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dvdisaster 0.79\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-09 14:18+0200\n"
+"POT-Creation-Date: 2021-10-09 16:03+0200\n"
 "PO-Revision-Date: 2011-07-24 21:12+0100\n"
 "Last-Translator: Jindřich Šesták <khagaroth@users.sourceforge.net>\n"
 "Language-Team: none (individual translator)\n"
@@ -924,13 +924,13 @@ msgstr ""
 msgid "windowtitle|About dvdisaster"
 msgstr "O aplikaci dvdisaster"
 
-#: src/help-dialogs.c:742 src/misc.c:219
+#: src/help-dialogs.c:743 src/misc.c:219
 msgid ""
 "Copyright 2004-2017 Carsten Gnoerlich.\n"
 "Copyright 2019-2021 The dvdisaster development team."
 msgstr ""
 
-#: src/help-dialogs.c:748
+#: src/help-dialogs.c:751
 msgid ""
 "dvdisaster provides a margin of safety against data loss\n"
 "on optical media caused by aging or scratches.\n"
@@ -942,7 +942,7 @@ msgstr ""
 "Vytvoří data pro opravu chyb, která je možné použít k obnovení\n"
 "nečitelných sektorů, pokud později dojde k poškození disku.\n"
 
-#: src/help-dialogs.c:753
+#: src/help-dialogs.c:756
 msgid ""
 "This software comes with  <b>absolutely no warranty</b>.\n"
 "This is free software and you are welcome to redistribute it\n"
@@ -952,13 +952,24 @@ msgstr ""
 "Jde o svobodný software a můžete jej šířit za dodržení\n"
 "podmínek [GNU General Public License].\n"
 
-#: src/help-dialogs.c:758
+#: src/help-dialogs.c:761
 msgid ""
 "\n"
 "e-mail: support@dvdisaster.org"
 msgstr ""
 
-#: src/help-dialogs.c:765
+#: src/help-dialogs.c:767
+msgid ""
+"\n"
+"This version is <b>not the original</b>. It has been patched\n"
+"for Debian to support DVD-ROMs (with and without encryption),\n"
+"and subsequently patched again to support a CLI-only build, among other things.\n"
+"\n"
+"Please do not bother the original authors of dvdisaster\n"
+"but submit bugreports against [GitHub] instead.\n"
+msgstr ""
+
+#: src/help-dialogs.c:775
 msgid ""
 "\n"
 "NetBSD port: Sergey Svishchev &lt;svs@ropnet.ru&gt;"
