--- a/locale/pt_BR.po
+++ b/locale/pt_BR.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dvdisaster 0.72.rc2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-09 14:18+0200\n"
+"POT-Creation-Date: 2021-10-09 16:03+0200\n"
 "PO-Revision-Date: 2010-06-09 11:13+0200\n"
 "Last-Translator: cg <cg@dvdisaster.org>\n"
 "Language-Team: Portuguese\n"
@@ -900,13 +900,13 @@ msgstr ""
 msgid "windowtitle|About dvdisaster"
 msgstr "windowtitle|Sobre o dvdisaster"
 
-#: src/help-dialogs.c:742 src/misc.c:219
+#: src/help-dialogs.c:743 src/misc.c:219
 msgid ""
 "Copyright 2004-2017 Carsten Gnoerlich.\n"
 "Copyright 2019-2021 The dvdisaster development team."
 msgstr ""
 
-#: src/help-dialogs.c:748
+#: src/help-dialogs.c:751
 msgid ""
 "dvdisaster provides a margin of safety against data loss\n"
 "on optical media caused by aging or scratches.\n"
@@ -918,7 +918,7 @@ msgstr ""
 "Ele cria dados de correção de erros que são usados para recuperar\n"
 "setores ilegíveis se o disco ficar danificado posteriormente.\n"
 
-#: src/help-dialogs.c:753
+#: src/help-dialogs.c:756
 msgid ""
 "This software comes with  <b>absolutely no warranty</b>.\n"
 "This is free software and you are welcome to redistribute it\n"
@@ -930,13 +930,24 @@ msgstr ""
 "\n"
 "Tradução para português por Pablo Almeida (pabloalmeidaff9@gmail.com)\n"
 
-#: src/help-dialogs.c:758
+#: src/help-dialogs.c:761
 msgid ""
 "\n"
 "e-mail: support@dvdisaster.org"
 msgstr ""
 
-#: src/help-dialogs.c:765
+#: src/help-dialogs.c:767
+msgid ""
+"\n"
+"This version is <b>not the original</b>. It has been patched\n"
+"for Debian to support DVD-ROMs (with and without encryption),\n"
+"and subsequently patched again to support a CLI-only build, among other things.\n"
+"\n"
+"Please do not bother the original authors of dvdisaster\n"
+"but submit bugreports against [GitHub] instead.\n"
+msgstr ""
+
+#: src/help-dialogs.c:775
 msgid ""
 "\n"
 "NetBSD port: Sergey Svishchev &lt;svs@ropnet.ru&gt;"
