--- a/locale/sv.po
+++ b/locale/sv.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dvdisaster\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-12-09 20:45+0100\n"
+"POT-Creation-Date: 2023-09-13 13:48+0200\n"
 "PO-Revision-Date: 2006-06-14 23:48+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: src/closure.c:314
+#: src/closure.c:343
 #, c-format
 msgid ""
 "# dvdisaster-%s configuration file\n"
@@ -30,15 +30,15 @@ msgstr ""
 "# som kommer att skrivas över varje gång dvdisaster körs.\n"
 "\n"
 
-#: src/closure.c:596
+#: src/closure.c:648
 msgid "medium.iso"
 msgstr ""
 
-#: src/closure.c:597
+#: src/closure.c:649
 msgid "medium.ecc"
 msgstr ""
 
-#: src/closure.c:598
+#: src/closure.c:650
 msgid "sector-"
 msgstr ""
 
@@ -1462,6 +1462,30 @@ msgstr ""
 "Lista på tillgängliga metoder:\n"
 "\n"
 
+#: src/misc-gui.c:241
+#, c-format
+msgid ""
+"The error correction file is already present:\n"
+"\n"
+"%s\n"
+"\n"
+"Overwrite it?"
+msgstr ""
+
+#: src/misc-gui.c:639
+msgid "Do not ask again"
+msgstr ""
+
+#: src/misc-gui.c:660
+#, c-format
+msgid ""
+"Image file already exists and does not match the medium:\n"
+"\n"
+"%s\n"
+"\n"
+"The existing image file will be deleted."
+msgstr ""
+
 #: src/misc.c:225
 msgid ""
 "This software comes with  ABSOLUTELY NO WARRANTY.  This\n"
@@ -1521,30 +1545,6 @@ msgstr ""
 
 #: src/misc.c:801
 msgid "Image successfully truncated"
-msgstr ""
-
-#: src/misc-gui.c:241
-#, c-format
-msgid ""
-"The error correction file is already present:\n"
-"\n"
-"%s\n"
-"\n"
-"Overwrite it?"
-msgstr ""
-
-#: src/misc-gui.c:639
-msgid "Do not ask again"
-msgstr ""
-
-#: src/misc-gui.c:660
-#, c-format
-msgid ""
-"Image file already exists and does not match the medium:\n"
-"\n"
-"%s\n"
-"\n"
-"The existing image file will be deleted."
 msgstr ""
 
 #: src/preferences.c:454
@@ -2607,9 +2607,9 @@ msgid "button|Smart L-EC"
 msgstr ""
 
 #: src/raw-sector-cache.c:37 src/raw-sector-cache.c:204
-#: src/raw-sector-cache.c:338 src/scsi-freebsd.c:133 src/scsi-freebsd.c:143
-#: src/scsi-linux.c:117 src/scsi-linux.c:126 src/scsi-netbsd.c:128
-#: src/scsi-netbsd.c:138 src/scsi-win32.c:256
+#: src/raw-sector-cache.c:338 src/scsi-darwin.c:218 src/scsi-freebsd.c:133
+#: src/scsi-freebsd.c:143 src/scsi-linux.c:117 src/scsi-linux.c:126
+#: src/scsi-netbsd.c:128 src/scsi-netbsd.c:138 src/scsi-win32.c:256
 #, c-format
 msgid "Could not open %s: %s"
 msgstr "Kunde inte öppna %s: %s"
@@ -2652,6 +2652,36 @@ msgstr ""
 #, c-format
 msgid " [Appended %d/%d sectors to cache file %s; LBA=%<PRId64>, ssize=%d, %d sectors]\n"
 msgstr ""
+
+#: src/read-adaptive-window.c:84
+msgid "Adaptive reading:"
+msgstr "Adaptiv läsning:"
+
+#: src/read-adaptive-window.c:112
+msgid "Sectors processed"
+msgstr "Sektorer behandlade"
+
+#: src/read-adaptive-window.c:115 src/scsi-layer.c:1762
+msgid "readable"
+msgstr "läsbar"
+
+#: src/read-adaptive-window.c:119
+msgid "correctable"
+msgstr "korrigerbar"
+
+#: src/read-adaptive-window.c:123
+msgid "missing"
+msgstr "saknas"
+
+#: src/read-adaptive-window.c:133
+#, c-format
+msgid "Readable: %d.%d%% / %d.%d%% required"
+msgstr ""
+
+#: src/read-adaptive-window.c:140
+#, c-format
+msgid "Total recoverable: %d.%d%%"
+msgstr "Totalt återhämtningsbara: %d.%d%%"
 
 #: src/read-adaptive.c:57 src/rs01-create.c:1018
 #, c-format
@@ -2978,35 +3008,44 @@ msgid ""
 "%2d.%1d%% of the image have been read (%<PRId64> sectors).\n"
 msgstr ""
 
-#: src/read-adaptive-window.c:84
-msgid "Adaptive reading:"
-msgstr "Adaptiv läsning:"
-
-#: src/read-adaptive-window.c:112
-msgid "Sectors processed"
-msgstr "Sektorer behandlade"
-
-#: src/read-adaptive-window.c:115 src/scsi-layer.c:1762
-msgid "readable"
-msgstr "läsbar"
-
-#: src/read-adaptive-window.c:119
-msgid "correctable"
-msgstr "korrigerbar"
-
-#: src/read-adaptive-window.c:123
-msgid "missing"
-msgstr "saknas"
-
-#: src/read-adaptive-window.c:133
+#: src/read-linear-window.c:102
 #, c-format
-msgid "Readable: %d.%d%% / %d.%d%% required"
-msgstr ""
+msgid "Current Speed: %d.%dx"
+msgstr "Aktuell hastighet: %d.%dx"
 
-#: src/read-adaptive-window.c:140
+#: src/read-linear-window.c:109 src/read-linear.c:515
 #, c-format
-msgid "Total recoverable: %d.%d%%"
-msgstr "Totalt återhämtningsbara: %d.%d%%"
+msgid "Unreadable / skipped sectors: %<PRId64>"
+msgstr "Oläsbara / överhoppade sektorer: %<PRId64>"
+
+#: src/read-linear-window.c:264 src/read-linear-window.c:333
+msgid "Already present"
+msgstr "Finns redan"
+
+#: src/read-linear-window.c:298 src/read-linear-window.c:340
+#: src/rs01-verify.c:130 src/rs02-verify.c:123 src/rs03-verify.c:133
+msgid "Sectors with CRC errors"
+msgstr "Sektorer med CRC-fel"
+
+#: src/read-linear-window.c:321
+msgid "Medium state"
+msgstr "Mediastatus"
+
+#: src/read-linear-window.c:329
+msgid "Not touched this time"
+msgstr "Rörs inte denna gång"
+
+#: src/read-linear-window.c:336
+msgid "Successfully read"
+msgstr "Läsning lyckades"
+
+#: src/read-linear-window.c:343
+msgid "Unreadable / skipped"
+msgstr "Oläsbar / överhoppad"
+
+#: src/read-linear-window.c:454
+msgid "Speed"
+msgstr "Hastighet"
 
 #: src/read-linear.c:122
 #, c-format
@@ -3060,11 +3099,6 @@ msgstr "klar.\n"
 #, c-format
 msgid "Waiting %d seconds for drive to spin up...\n"
 msgstr "Väntar %d sekunder på att enheten ska varva upp...\n"
-
-#: src/read-linear.c:515 src/read-linear-window.c:109
-#, c-format
-msgid "Unreadable / skipped sectors: %<PRId64>"
-msgstr "Oläsbara / överhoppade sektorer: %<PRId64>"
 
 #: src/read-linear.c:605
 #, c-format
@@ -3237,40 +3271,6 @@ msgid ""
 "The Image will be truncated accordingly. See the manual for details.\n"
 "Use the --dao option to disable image truncating.\n"
 msgstr ""
-
-#: src/read-linear-window.c:102
-#, c-format
-msgid "Current Speed: %d.%dx"
-msgstr "Aktuell hastighet: %d.%dx"
-
-#: src/read-linear-window.c:264 src/read-linear-window.c:333
-msgid "Already present"
-msgstr "Finns redan"
-
-#: src/read-linear-window.c:298 src/read-linear-window.c:340
-#: src/rs01-verify.c:130 src/rs02-verify.c:123 src/rs03-verify.c:133
-msgid "Sectors with CRC errors"
-msgstr "Sektorer med CRC-fel"
-
-#: src/read-linear-window.c:321
-msgid "Medium state"
-msgstr "Mediastatus"
-
-#: src/read-linear-window.c:329
-msgid "Not touched this time"
-msgstr "Rörs inte denna gång"
-
-#: src/read-linear-window.c:336
-msgid "Successfully read"
-msgstr "Läsning lyckades"
-
-#: src/read-linear-window.c:343
-msgid "Unreadable / skipped"
-msgstr "Oläsbar / överhoppad"
-
-#: src/read-linear-window.c:454
-msgid "Speed"
-msgstr "Hastighet"
 
 #: src/recover-raw.c:66
 #, c-format
@@ -5414,6 +5414,15 @@ msgstr ""
 msgid "<b>State:</b>"
 msgstr ""
 
+#: src/scsi-darwin.c:183
+msgid "No CD/DVD drives found."
+msgstr "Inga cd/dvd-enheter hittades."
+
+#: src/scsi-darwin.c:229
+#, c-format
+msgid "Could not open %s (%s)."
+msgstr ""
+
 #: src/scsi-freebsd.c:49 src/scsi-linux.c:53
 msgid ""
 "Can not access /dev for devices\n"
@@ -5823,15 +5832,19 @@ msgid ""
 "not found.\n"
 msgstr ""
 
-#: src/show-manual.c:114
+#: src/show-manual.c:118
 msgid "Could not create pipe before fork"
 msgstr ""
 
-#: src/show-manual.c:122
+#: src/show-manual.c:123 src/show-manual.c:128
+msgid "Could not set pipe flags before fork"
+msgstr ""
+
+#: src/show-manual.c:136
 msgid "Could not fork to start xdg-open"
 msgstr ""
 
-#: src/show-manual.c:145
+#: src/show-manual.c:159
 #, c-format
 msgid ""
 "execvp could not execute \"xdg-open\":\n"
@@ -6424,9 +6437,6 @@ msgstr ""
 #~ msgstr ""
 #~ "Inga cd/dvd-enheter hittades i /dev.\n"
 #~ "Inga enheter kommer att vara förvalda.\n"
-
-#~ msgid "No CD/DVD drives found."
-#~ msgstr "Inga cd/dvd-enheter hittades."
 
 #~ msgid "dvdisaster-%s log\n"
 #~ msgstr "dvdisaster-%s logg\n"
