--- a/locale/de.po
+++ b/locale/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dvdisaster 0.52.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-09 17:07+0200\n"
+"POT-Creation-Date: 2023-09-13 13:48+0200\n"
 "PO-Revision-Date: 2004-11-30 19:48+0100\n"
 "Last-Translator: Carsten Gnörlich <carsten@dvdisaster.de>\n"
 "Language-Team: German <de@li.org>\n"
@@ -18,7 +18,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: src/closure.c:296
+#: src/closure.c:343
 #, c-format
 msgid ""
 "# dvdisaster-%s configuration file\n"
@@ -31,15 +31,15 @@ msgstr ""
 "# Sie wird bei jedem Aufruf von dvdisaster neu überschrieben.\n"
 "\n"
 
-#: src/closure.c:564
+#: src/closure.c:648
 msgid "medium.iso"
 msgstr "abbild.iso"
 
-#: src/closure.c:565
+#: src/closure.c:649
 msgid "medium.ecc"
 msgstr "abbild.ecc"
 
-#: src/closure.c:566
+#: src/closure.c:650
 msgid "sector-"
 msgstr "sektor_"
 
@@ -933,7 +933,7 @@ msgstr ""
 "<big>GNU General Public License</big>\n"
 "<i>Die Lizenzbedingungen von dvdisaster.</i>"
 
-#: src/help-dialogs.c:515
+#: src/help-dialogs.c:503
 #, c-format
 msgid ""
 "File\n"
@@ -944,7 +944,7 @@ msgstr ""
 "%s\n"
 "nicht vorhanden"
 
-#: src/help-dialogs.c:525
+#: src/help-dialogs.c:513
 #, c-format
 msgid ""
 "File\n"
@@ -955,7 +955,7 @@ msgstr ""
 "%s\n"
 "kann nicht zugegriffen werden"
 
-#: src/help-dialogs.c:537
+#: src/help-dialogs.c:525
 msgid ""
 "\n"
 "<- Error: Text file truncated here"
@@ -963,17 +963,17 @@ msgstr ""
 "\n"
 "<- Fehler: Textdatei wurde hier abgeschnitten"
 
-#: src/help-dialogs.c:736
+#: src/help-dialogs.c:724
 msgid "windowtitle|About dvdisaster"
 msgstr "Kurzinformation"
 
-#: src/help-dialogs.c:755 src/misc.c:219
+#: src/help-dialogs.c:743 src/misc.c:219
 msgid ""
 "Copyright 2004-2017 Carsten Gnoerlich.\n"
 "Copyright 2019-2021 The dvdisaster development team."
 msgstr ""
 
-#: src/help-dialogs.c:763
+#: src/help-dialogs.c:751
 msgid ""
 "dvdisaster provides a margin of safety against data loss\n"
 "on optical media caused by aging or scratches.\n"
@@ -985,7 +985,7 @@ msgstr ""
 "Es erzeugt Fehlerkorrektur-Daten, um bei nachfolgenden Datenträger-\n"
 "Problemen unlesbare Sektoren zu rekonstruieren.\n"
 
-#: src/help-dialogs.c:768
+#: src/help-dialogs.c:756
 msgid ""
 "This software comes with  <b>absolutely no warranty</b>.\n"
 "This is free software and you are welcome to redistribute it\n"
@@ -994,13 +994,13 @@ msgstr ""
 "dvdisaster ist <b>freie Software</b>; es gelten die Bedingungen\n"
 "der [GNU General Public License] .\n"
 
-#: src/help-dialogs.c:773
+#: src/help-dialogs.c:761
 msgid ""
 "\n"
 "e-mail: support@dvdisaster.org"
 msgstr ""
 
-#: src/help-dialogs.c:779
+#: src/help-dialogs.c:767
 msgid ""
 "\n"
 "This version is <b>not the original</b>. It has been patched\n"
@@ -1011,7 +1011,7 @@ msgid ""
 "but submit bugreports against [GitHub] instead.\n"
 msgstr ""
 
-#: src/help-dialogs.c:787
+#: src/help-dialogs.c:775
 msgid ""
 "\n"
 "NetBSD port: Sergey Svishchev &lt;svs@ropnet.ru&gt;"
@@ -1566,6 +1566,40 @@ msgstr ""
 "Liste der verfügbaren Methoden:\n"
 "\n"
 
+#: src/misc-gui.c:241
+#, c-format
+msgid ""
+"The error correction file is already present:\n"
+"\n"
+"%s\n"
+"\n"
+"Overwrite it?"
+msgstr ""
+"Es gibt bereits eine Fehlerkorrektur-Datei:\n"
+"\n"
+"%s\n"
+"\n"
+"Soll sie überschrieben werden?"
+
+#: src/misc-gui.c:639
+msgid "Do not ask again"
+msgstr "Nicht mehr nachfragen"
+
+#: src/misc-gui.c:660
+#, c-format
+msgid ""
+"Image file already exists and does not match the medium:\n"
+"\n"
+"%s\n"
+"\n"
+"The existing image file will be deleted."
+msgstr ""
+"Die bereits vorhandene Abbild-Datei paßt nicht zu dem Datenträger:\n"
+"\n"
+"%s\n"
+"\n"
+"Soll die Abbild-Datei gelöscht werden?"
+
 #: src/misc.c:225
 msgid ""
 "This software comes with  ABSOLUTELY NO WARRANTY.  This\n"
@@ -1624,40 +1658,6 @@ msgstr ""
 #: src/misc.c:801
 msgid "Image successfully truncated"
 msgstr ""
-
-#: src/misc-gui.c:241
-#, c-format
-msgid ""
-"The error correction file is already present:\n"
-"\n"
-"%s\n"
-"\n"
-"Overwrite it?"
-msgstr ""
-"Es gibt bereits eine Fehlerkorrektur-Datei:\n"
-"\n"
-"%s\n"
-"\n"
-"Soll sie überschrieben werden?"
-
-#: src/misc-gui.c:639
-msgid "Do not ask again"
-msgstr "Nicht mehr nachfragen"
-
-#: src/misc-gui.c:660
-#, c-format
-msgid ""
-"Image file already exists and does not match the medium:\n"
-"\n"
-"%s\n"
-"\n"
-"The existing image file will be deleted."
-msgstr ""
-"Die bereits vorhandene Abbild-Datei paßt nicht zu dem Datenträger:\n"
-"\n"
-"%s\n"
-"\n"
-"Soll die Abbild-Datei gelöscht werden?"
 
 #: src/preferences.c:454
 msgid "Switched to the linear reading strategy."
@@ -2915,9 +2915,9 @@ msgid "button|Smart L-EC"
 msgstr "Smart L-EC"
 
 #: src/raw-sector-cache.c:37 src/raw-sector-cache.c:204
-#: src/raw-sector-cache.c:338 src/scsi-freebsd.c:133 src/scsi-freebsd.c:143
-#: src/scsi-linux.c:117 src/scsi-linux.c:126 src/scsi-netbsd.c:128
-#: src/scsi-netbsd.c:138 src/scsi-win32.c:256
+#: src/raw-sector-cache.c:338 src/scsi-darwin.c:218 src/scsi-freebsd.c:133
+#: src/scsi-freebsd.c:143 src/scsi-linux.c:117 src/scsi-linux.c:126
+#: src/scsi-netbsd.c:128 src/scsi-netbsd.c:138 src/scsi-win32.c:256
 #, c-format
 msgid "Could not open %s: %s"
 msgstr "Konnte %s nicht öffnen: %s"
@@ -2962,6 +2962,36 @@ msgstr " [Erzeuge neue Datei %s]\n"
 #, c-format
 msgid " [Appended %d/%d sectors to cache file %s; LBA=%<PRId64>, ssize=%d, %d sectors]\n"
 msgstr " [%d/%d Sektoren der Datei %s hinzugefügt; LBA=%<PRId64>, S.-Größe=%d, %d Sektoren]\n"
+
+#: src/read-adaptive-window.c:84
+msgid "Adaptive reading:"
+msgstr "Angepaßtes Leseverfahren:"
+
+#: src/read-adaptive-window.c:112
+msgid "Sectors processed"
+msgstr "Bearbeitete Sektoren"
+
+#: src/read-adaptive-window.c:115 src/scsi-layer.c:1762
+msgid "readable"
+msgstr "lesbar"
+
+#: src/read-adaptive-window.c:119
+msgid "correctable"
+msgstr "korrigierbar"
+
+#: src/read-adaptive-window.c:123
+msgid "missing"
+msgstr "fehlend"
+
+#: src/read-adaptive-window.c:133
+#, c-format
+msgid "Readable: %d.%d%% / %d.%d%% required"
+msgstr "Lesbar: %d.%d%% / %d.%d%% benötigt"
+
+#: src/read-adaptive-window.c:140
+#, c-format
+msgid "Total recoverable: %d.%d%%"
+msgstr "Insgesamt wiederherstellbar: %d.%d%%"
 
 #: src/read-adaptive.c:57 src/rs01-create.c:1018
 #, c-format
@@ -3307,35 +3337,44 @@ msgstr ""
 "%s\n"
 "%2d.%1d%% des Abbilds wurden eingelesen (%<PRId64> Sektoren).\n"
 
-#: src/read-adaptive-window.c:84
-msgid "Adaptive reading:"
-msgstr "Angepaßtes Leseverfahren:"
-
-#: src/read-adaptive-window.c:112
-msgid "Sectors processed"
-msgstr "Bearbeitete Sektoren"
-
-#: src/read-adaptive-window.c:115 src/scsi-layer.c:1762
-msgid "readable"
-msgstr "lesbar"
-
-#: src/read-adaptive-window.c:119
-msgid "correctable"
-msgstr "korrigierbar"
-
-#: src/read-adaptive-window.c:123
-msgid "missing"
-msgstr "fehlend"
-
-#: src/read-adaptive-window.c:133
+#: src/read-linear-window.c:102
 #, c-format
-msgid "Readable: %d.%d%% / %d.%d%% required"
-msgstr "Lesbar: %d.%d%% / %d.%d%% benötigt"
+msgid "Current Speed: %d.%dx"
+msgstr "Momentane Geschwindigkeit: %d.%dx"
 
-#: src/read-adaptive-window.c:140
+#: src/read-linear-window.c:109 src/read-linear.c:515
 #, c-format
-msgid "Total recoverable: %d.%d%%"
-msgstr "Insgesamt wiederherstellbar: %d.%d%%"
+msgid "Unreadable / skipped sectors: %<PRId64>"
+msgstr "Unlesbare / Übersprungene Sektoren: %<PRId64>"
+
+#: src/read-linear-window.c:264 src/read-linear-window.c:333
+msgid "Already present"
+msgstr "Bereits vorhanden"
+
+#: src/read-linear-window.c:298 src/read-linear-window.c:340
+#: src/rs01-verify.c:130 src/rs02-verify.c:123 src/rs03-verify.c:133
+msgid "Sectors with CRC errors"
+msgstr "Prüfsummen-Fehler"
+
+#: src/read-linear-window.c:321
+msgid "Medium state"
+msgstr "Datenträger-Zustand"
+
+#: src/read-linear-window.c:329
+msgid "Not touched this time"
+msgstr "Diesmal unberücksichtigt"
+
+#: src/read-linear-window.c:336
+msgid "Successfully read"
+msgstr "Erfolgreich gelesen"
+
+#: src/read-linear-window.c:343
+msgid "Unreadable / skipped"
+msgstr "Unlesbar / Übersprungen"
+
+#: src/read-linear-window.c:454
+msgid "Speed"
+msgstr "Geschwindigkeit"
 
 #: src/read-linear.c:122
 #, c-format
@@ -3389,11 +3428,6 @@ msgstr "fertig.\n"
 #, c-format
 msgid "Waiting %d seconds for drive to spin up...\n"
 msgstr "Warte %d Sekunden auf das Hochdrehen des Laufwerks...\n"
-
-#: src/read-linear.c:515 src/read-linear-window.c:109
-#, c-format
-msgid "Unreadable / skipped sectors: %<PRId64>"
-msgstr "Unlesbare / Übersprungene Sektoren: %<PRId64>"
 
 #: src/read-linear.c:605
 #, c-format
@@ -3574,40 +3608,6 @@ msgid ""
 "The Image will be truncated accordingly. See the manual for details.\n"
 "Use the --dao option to disable image truncating.\n"
 msgstr ""
-
-#: src/read-linear-window.c:102
-#, c-format
-msgid "Current Speed: %d.%dx"
-msgstr "Momentane Geschwindigkeit: %d.%dx"
-
-#: src/read-linear-window.c:264 src/read-linear-window.c:333
-msgid "Already present"
-msgstr "Bereits vorhanden"
-
-#: src/read-linear-window.c:298 src/read-linear-window.c:340
-#: src/rs01-verify.c:130 src/rs02-verify.c:123 src/rs03-verify.c:133
-msgid "Sectors with CRC errors"
-msgstr "Prüfsummen-Fehler"
-
-#: src/read-linear-window.c:321
-msgid "Medium state"
-msgstr "Datenträger-Zustand"
-
-#: src/read-linear-window.c:329
-msgid "Not touched this time"
-msgstr "Diesmal unberücksichtigt"
-
-#: src/read-linear-window.c:336
-msgid "Successfully read"
-msgstr "Erfolgreich gelesen"
-
-#: src/read-linear-window.c:343
-msgid "Unreadable / skipped"
-msgstr "Unlesbar / Übersprungen"
-
-#: src/read-linear-window.c:454
-msgid "Speed"
-msgstr "Geschwindigkeit"
 
 #: src/recover-raw.c:66
 #, c-format
@@ -5927,6 +5927,15 @@ msgstr "<b>Leistung:</b>"
 msgid "<b>State:</b>"
 msgstr "<b>Zustand:</b>"
 
+#: src/scsi-darwin.c:183
+msgid "No CD/DVD drives found."
+msgstr ""
+
+#: src/scsi-darwin.c:229
+#, c-format
+msgid "Could not open %s (%s)."
+msgstr ""
+
 #: src/scsi-freebsd.c:49 src/scsi-linux.c:53
 msgid ""
 "Can not access /dev for devices\n"
@@ -6361,15 +6370,19 @@ msgid ""
 "not found.\n"
 msgstr ""
 
-#: src/show-manual.c:114
+#: src/show-manual.c:118
 msgid "Could not create pipe before fork"
 msgstr ""
 
-#: src/show-manual.c:122
+#: src/show-manual.c:123 src/show-manual.c:128
+msgid "Could not set pipe flags before fork"
+msgstr ""
+
+#: src/show-manual.c:136
 msgid "Could not fork to start xdg-open"
 msgstr ""
 
-#: src/show-manual.c:145
+#: src/show-manual.c:159
 #, c-format
 msgid ""
 "execvp could not execute \"xdg-open\":\n"
